# karaty

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  README.zh-CN.md  build.rs  forked.py  index.html  karaty.toml  release.py  routing.toml  version.py
.dioxus/plugins/core/: .gitignore  .luarc.json  LICENSE  README.md  manager.lua  plugin.lua  typedef.lua  version.lua
.dioxus/plugins/karaty/: README.md  init.lua
.github/workflows/: main.yaml  main.yml  new-branch.yml  release.yml
Karaty/: ContentView.swift  KaratyApp.swift
Karaty.xcodeproj/: project.pbxproj
assets/dioxus/: karaty.js  karaty.js.br  karaty_bg.wasm  karaty_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
assets/dioxus/snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/src/: common.js.br
assets/dioxus/snippets/dioxus-web-a95d8cc6c91ff8eb/: inline0.js.br
assets/dioxus/snippets/dioxus-web-a95d8cc6c91ff8eb/src/: eval.js.br
blueprint/: Cargo.toml
blueprint/src/: config.rs  lib.rs
config/: _index.json
data/: _index.json
data/pages/: _index.json  author.md  dependencies.json  home.md
data/posts/: _index.json
data/posts/blog/: 0.2-CN.md  _index.json
data/posts/docs/: _index.json  _index.md  giscus.md  icons.md  navigation.md  routing.md  summary.md
data/posts/docs/configure/: test.md
data/posts/docs/templates/: _index.json
docsite/: Cargo.toml  build.rs
docsite/config/: routing.toml
docsite/public/: karaty.toml
docsite/public/assets/highlight/: highlight.min.js
docsite/public/config/: _index.json
docsite/public/data/pages/: home.md
docsite/src/: blog.rs  lib.rs
docsite/src/hooks/: mode.rs
forked/: Cargo.toml  karaty.toml
forked/public/config/: routing.toml  template.toml
forked/public/data/: _index.json  home.md
forked/public/data/posts/blog/: roadmap.md
forked/public/data/posts/docs/: navigation.md
forked/public/data/posts/docs/templates/: default.md
forked/src/components/: nav.rs
forked/src/utils/: data.rs
karaty/: Cargo.toml  Dioxus.toml  build.rs  karaty.toml
karaty-template/: Cargo.toml
karaty/config/: template.toml
karaty/data/pages/: home.md
karaty/data/posts/blog/: hello.md  roadmap.md
karaty/data/posts/docs/: _index.md  build.md  routing.md
karaty/data/posts/docs/templates/: main.md
karaty/public/: CNAME  karaty.toml
karaty/public/config/: routing.toml
karaty/public/data/: _index.json
karaty/public/data/pages/: _index.json
karaty/public/data/posts/blog/: _index.json  roadmap.md
karaty/public/data/posts/docs/: _index.json  _index.md  data-source.md  routing.md  summary.md
karaty/public/data/posts/docs/templates/: _index.json  develop.md
karaty/public/data/templates/: _index.json
karaty/src/: config.rs  main.rs  setup.rs
karaty/src/components/: footer.rs  giscus.rs  icon.rs  markdown.rs  mod.rs  nav.rs
karaty/src/hooks/: mode.rs
karaty/src/pages/: error.rs  mod.rs  preset.rs  template.rs
karaty/src/utils/: data.rs  mod.rs  template_loader.rs
public/: CNAME  karaty.toml
public/assets/tailwind/: tailwind.min.js
public/config/: routing.toml
public/data/: _index.json
public/data/pages/: author.md
public/data/posts/blog/: roadmap.md
public/data/posts/docs/: _index.json
public/data/posts/docs/templates/: _index.json
pytool/: pyvenv.cfg
source/: _index.json  index.json
source/pages/: _index.json  about.md  author.md  home.md  index.json
source/posts/: _index.json  index.json  zh-hello.md
source/posts/blog/: _index.json  index.json  roadmap.md
source/posts/docs/: _index.json  _index.md  icons.md  index.json  navigation.md  routing.md  summary.md
source/posts/docs/configure/: _index.json  index.json
src/: config.rs  main.rs  setup.rs
src/components/: content.rs  footer.rs  icon.rs  loading.rs  markdown.rs  mod.rs  nav.rs
src/hooks/: mode.rs
src/pages/: _404.rs  blog.rs  error.rs  loader.rs  mod.rs  preset.rs  template.rs
src/utils/: data.rs  markdown.rs  mod.rs  template_loader.rs
template/: Cargo.toml
template/config/: personal.json
template/pages/: home.md
template/posts/: hello.md  zh-hello.md
template/src/: blog.rs  docs.rs  lib.rs
