[package]
name = "dioxus-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.3.2" }
dioxus-web = "0.3.1"
dioxus-router = { version = "0.3.0", features = ["web"] }
fermi = "0.3.0"


js-sys = "0.3.58"
web-sys = { version = "0.3.58", features = ["Storage"] }
dioxus-free-icons = { version = "0.6.0", features = ["font-awesome-brands", "font-awesome-solid"] }
dioxus-toast = { version = "0.2.0", default-features = false, features = ["web"] }
gloo = "0.8.0"
log = "0.4.6"
wasm-logger = "0.2.0"
anyhow = "1.0.57"
dioxus-use-storage = { git = "https://github.com/oovm/dioxus-hooks" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.2"

markdown-meta-parser = "0.1.3"
markdown = "1.0.0-alpha.8"
async-recursion = "1.0.4"

[profile.release]
lto = true
opt-level = 's'
