[package]
name = "karaty-blueprint"
version = "0.1.0"
edition = "2021"

description = "Karaty template develop blueprint"

license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
reqwasm = "0.5.0"
