[package]
name = "karaty"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.3" }
dioxus-web = "0.4.3"
dioxus-retrouter = { git = "https://github.com/mrxiaozhuox/dioxus-retrouter", features = ["web"] }
fermi = "0.4.3"

js-sys = "0.3.58"
web-sys = { version = "0.3.58", features = ["Storage", "HtmlIFrameElement"] }
dioxus-free-icons = { version = "0.7.0", features = ["font-awesome-brands", "font-awesome-solid"] }
dioxus-toast = { version = "0.3.0", default-features = false, features = ["web"] }
gloo = "0.11.0"
log = "0.4.6"
wasm-logger = "0.2.0"
anyhow = "1.0.57"
dioxus-local-storage = { git = "https://github.com/mrxiaozhuox/dioxus-local-storage" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"

markdown = "1.0.0-alpha.16"
async-recursion = "1.0.4"
chrono = { version = "0.4.24", default-features = false, features = ["wasmbind"] }
indoc = "2.0.1"

regex = "1.10.2"

karaty-blueprint = { git = "https://github.com/mrxiaozhuox/karaty" }

# you can add your extension template in here
# you need add a template=true field for dependencies, that can help builder find this part.
karaty-template = { path = "../template/", template = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
serde_json = "1.0"
quote = "1.0"

[profile.release]
lto = true
opt-level = 's'
