[package]
name = "karaty-docsite"
version = "0.2.1"
edition = "2021"

description = "docsite karaty template"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = "0.4.3"
dioxus-retrouter = { version = "0.4.0", features = ["web"] }

karaty-blueprint = "0.2.2"

serde = { version = "1", features = ["derive"] }
toml = "0.8"
markdown = "1.0.0-alpha.16" 
markdown-meta-parser = "0.1.3"

reqwasm = "0.5"
log = "0.4"
chrono = "0.4"
web-sys = { version = "0.3.70", features = ["Navigator", "Window", "Clipboard", "TextEncoder", "TextDecoder"] }

dioxus-free-icons = { version = "0.7.0", features = ["hero-icons-solid"] }
