[package]
name = "karaty-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-retrouter = { git = "https://github.com/mrxiaozhuox/dioxus-retrouter", features = ["web"] }
karaty-blueprint = { git = "https://github.com/mrxiaozhuox/karaty" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
markdown = "1.0.0-alpha.16" 
markdown-meta-parser = "0.1.3"
reqwasm = "0.5"
log = "0.4"
chrono = "0.4"
